# pipelineelement

./: .dockerignore  .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
src/: PipelineSubscriber.cpp  PipelineSubscriber.h  main.cpp
